namespace Fig.Core.Project
{
    public class ExportSettings
    {
        public int Width { get; set; } = 1920;
        public int Height { get; set; } = 1080;
        public int Fps { get; set; } = 30;
        public string Codec { get; set; } = "h264";
    }
}
